force-app/main/default/objects/Event_Participant__c/Event_Participant__c.object-meta.xml
<CustomObject>
    <label>Event Participant</label>
    <nameField>
        <label>Event Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>