force-app/main/default/objects/Event_Participant__c/fields/Architect_Event__c.field-meta.xml
<CustomField>
    <fullName>Architect_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Architect Event</label>
    <referenceTo>Architect_Event__c</referenceTo>
    <relationshipLabel>Event Participants</relationshipLabel>
    <relationshipName>Event_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>